overflow problem solve

--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@
 
 .wrapper{
     width:100vw;
-    height:100vh;
+    min-height:100vh;
     color: var(--colorLight2);
     background-image: linear-gradient(160deg, #112d4e 0%, #3f72af 100%);;
 }
@@ -154,6 +154,7 @@ h1 {
     justify-content: center;
     align-items: center;
     margin-top: 2rem;
+    margin-bottom:2rem
 }
 
 .parameter{
